--- a/environment.conf
+++ b/environment.conf
@@ -1,2 +1,2 @@
-modulepath          = site:modules:$basemodulepath
+modulepath          = site:modules:custommodule:$basemodulepath
 config_version      = 'scripts/config_version.sh $environmentpath $environment'
